--- a/index.html
+++ b/index.html
@@ -48,6 +48,17 @@
                 I build backend systems and integrations that connect enterprise platforms.
                 Over a decade of experience spanning banking, semiconductor manufacturing, and media enterprises in Singapore.
             </p>
+            <div class="hero-media" aria-label="Intro video">
+                <div class="hero-video">
+                    <iframe
+                        src="https://www.youtube.com/embed/VIDEO_ID"
+                        title="YouTube video player"
+                        frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                        allowfullscreen>
+                    </iframe>
+                </div>
+            </div>
             <div class="hero-actions">
                 <a href="mailto:yehtutaung.yanyan@gmail.com" class="btn btn-primary">
                     <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
