--- a/index.html
+++ b/index.html
@@ -51,13 +51,19 @@
             <div class="hero-media" aria-label="Intro video">
                 <div class="hero-video">
                     <iframe
-                        src="https://www.youtube.com/embed/VIDEO_ID"
-                        title="YouTube video player"
-                        frameborder="0"
+                        src="https://www.youtube-nocookie.com/embed/2YXGb39FNjU?rel=0&modestbranding=1"
+                        title="Intro video"
+                        loading="lazy"
+                        referrerpolicy="strict-origin-when-cross-origin"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                         allowfullscreen>
                     </iframe>
                 </div>
+                <p class="hero-video-fallback">
+                    <a href="https://www.youtube.com/watch?v=2YXGb39FNjU" target="_blank" rel="noopener">
+                        Watch on YouTube
+                    </a>
+                </p>
             </div>
             <div class="hero-actions">
                 <a href="mailto:yehtutaung.yanyan@gmail.com" class="btn btn-primary">
@@ -101,17 +107,15 @@
             <div class="about-content">
                 <div class="about-text">
                     <p data-i18n="about.p1">
-                        I started in Yangon, Myanmar, spending five years building software for banking, logistics,
-                        and enterprise clients including Infosys, Hitachi, and Huawei.
+                        Singapore-based Full Stack Developer building scalable web applications and enterprise integrations.
                     </p>
                     <p data-i18n="about.p2">
-                        In 2019, I moved to Singapore. At Micron, I worked on software connecting semiconductor
-                        manufacturing equipment. Now at DW Consulting, I build API integrations for Mediacorp,
-                        connecting SAP systems with Google, Docusign, ACRA, and AWS.
+                        Experienced in backend architecture, API design, cloud deployment, and connecting complex
+                        systems across SAP, government services, and modern cloud platforms.
                     </p>
                     <p data-i18n="about.p3">
-                        I solve the problems that sit between systems. When your enterprise platform needs to
-                        talk to a government API, a cloud service, or a legacy database, that's where I work best.
+                        I specialize in solving the problems between systems—turning fragmented platforms into
+                        secure, reliable, and production-ready solutions.
                     </p>
                 </div>
                 <div class="about-image">
