Update experience timeline for current and past roles

--- a/index.html
+++ b/index.html
@@ -178,16 +178,16 @@
                     <div class="job-content">
                         <div class="job-header">
                             <div>
-                                <h3 data-i18n="work.job1.title">Software Developer</h3>
-                                <p class="company">DW Consulting / Mediacorp</p>
+                                <h3 data-i18n="work.job1.title">Senior Full Stack Developer</h3>
+                                <p class="company">Tech Studio Solutions</p>
                             </div>
-                            <span class="period" data-i18n="work.job1.period">2020 - Present</span>
+                            <span class="period" data-i18n="work.job1.period">2023 - Present</span>
                         </div>
                         <ul>
-                            <li data-i18n="work.job1.item1">API integrations with Google Ads, Docusign, ACRA, and AWS</li>
-                            <li data-i18n="work.job1.item2">OAuth 2.0 and JWT authentication implementations</li>
-                            <li data-i18n="work.job1.item3">ABAP development for HR and Finance (ALV reports, Adobe Forms)</li>
-                            <li data-i18n="work.job1.item4">Full development cycle ownership including SIT</li>
+                            <li data-i18n="work.job1.item1">Build scalable web applications and enterprise integration solutions</li>
+                            <li data-i18n="work.job1.item2">Design backend architecture and secure API services</li>
+                            <li data-i18n="work.job1.item3">Lead cloud deployment and production release workflows</li>
+                            <li data-i18n="work.job1.item4">Deliver end-to-end development from requirements to support</li>
                         </ul>
                     </div>
                 </article>
@@ -200,16 +200,38 @@
                     <div class="job-content">
                         <div class="job-header">
                             <div>
-                                <h3 data-i18n="work.job2.title">Software Engineer</h3>
+                                <h3 data-i18n="work.job2.title">Software Developer</h3>
+                                <p class="company">DW Consulting / Mediacorp</p>
+                            </div>
+                            <span class="period">2020 - 2023</span>
+                        </div>
+                        <ul>
+                            <li data-i18n="work.job2.item1">API integrations with Google Ads, Docusign, ACRA, and AWS</li>
+                            <li data-i18n="work.job2.item2">OAuth 2.0 and JWT authentication implementations</li>
+                            <li data-i18n="work.job2.item3">ABAP development for HR and Finance (ALV reports, Adobe Forms)</li>
+                            <li data-i18n="work.job2.item4">Full development cycle ownership including SIT</li>
+                        </ul>
+                    </div>
+                </article>
+
+                <article class="job">
+                    <div class="job-marker">
+                        <div class="marker-dot"></div>
+                        <div class="marker-line"></div>
+                    </div>
+                    <div class="job-content">
+                        <div class="job-header">
+                            <div>
+                                <h3 data-i18n="work.job3.title">Software Engineer</h3>
                                 <p class="company">Micron Semiconductor</p>
                             </div>
                             <span class="period">2019 - 2020</span>
                         </div>
                         <ul>
-                            <li data-i18n="work.job2.item1">Level 2 support for production-critical systems</li>
-                            <li data-i18n="work.job2.item2">In-house application ownership and maintenance</li>
-                            <li data-i18n="work.job2.item3">Manufacturing software customization</li>
-                            <li data-i18n="work.job2.item4">Cross-departmental technical coordination</li>
+                            <li data-i18n="work.job3.item1">Level 2 support for production-critical systems</li>
+                            <li data-i18n="work.job3.item2">In-house application ownership and maintenance</li>
+                            <li data-i18n="work.job3.item3">Manufacturing software customization</li>
+                            <li data-i18n="work.job3.item4">Cross-departmental technical coordination</li>
                         </ul>
                     </div>
                 </article>
@@ -221,16 +243,16 @@
                     <div class="job-content">
                         <div class="job-header">
                             <div>
-                                <h3 data-i18n="work.job3.title">Software Developer</h3>
+                                <h3 data-i18n="work.job4.title">Software Developer</h3>
                                 <p class="company">ACE Data Systems</p>
                             </div>
                             <span class="period">2013 - 2018</span>
                         </div>
                         <ul>
-                            <li data-i18n="work.job3.item1">Finacle Core Banking for AGD Bank (Infosys)</li>
-                            <li data-i18n="work.job3.item2">Reporting modules for Development Bank of Japan (Hitachi)</li>
-                            <li data-i18n="work.job3.item3">E-Tender and logistics systems for PAN-United and Huawei</li>
-                            <li data-i18n="work.job3.item4">POS and ticketing platform development</li>
+                            <li data-i18n="work.job4.item1">Finacle Core Banking for AGD Bank (Infosys)</li>
+                            <li data-i18n="work.job4.item2">Reporting modules for Development Bank of Japan (Hitachi)</li>
+                            <li data-i18n="work.job4.item3">E-Tender and logistics systems for PAN-United and Huawei</li>
+                            <li data-i18n="work.job4.item4">POS and ticketing platform development</li>
                         </ul>
                     </div>
                 </article>
