Update hero branding text

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <nav class="nav">
         <div class="nav-inner">
             <a href="#" class="logo">
-                <span class="logo-text">YHA</span>
+                <span class="logo-text">REX</span>
                 <span class="logo-dot"></span>
             </a>
             <div class="nav-links">
@@ -41,9 +41,9 @@
                 <span class="badge-dot"></span>
                 <span data-i18n="hero.available">Available for opportunities</span>
             </div>
-            <p class="label" data-i18n="hero.label">Java Developer</p>
+            <p class="label" data-i18n="hero.label">Senior Full-Stack Developer</p>
             <h1>Ye Htut Aung</h1>
-            <p class="subtitle" data-i18n="hero.subtitle">Senior Java Engineer specializing in API integrations and enterprise system connectivity.</p>
+            <p class="subtitle" data-i18n="hero.subtitle">Senior Full-Stack Developer specializing in API integrations and enterprise system connectivity.</p>
             <p class="summary" data-i18n="hero.summary">
                 I build backend systems and integrations that connect enterprise platforms.
                 Over a decade of experience spanning banking, semiconductor manufacturing, and media enterprises in Singapore.
