--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     </svg>
                     <span data-i18n="hero.contact">Get in Touch</span>
                 </a>
-                <a href="https://linkedin.com/in/yehtut-aung-b8594b167" target="_blank" class="btn btn-secondary">
+                <a href="https://www.linkedin.com/in/ye-htut-aung-b8594b167/" target="_blank" class="btn btn-secondary">
                     <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                         <path d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z"></path>
                         <rect x="2" y="9" width="4" height="12"></rect>
@@ -406,7 +406,7 @@
                         <span class="contact-value">+65 9164 4736</span>
                     </div>
                 </a>
-                <a href="https://linkedin.com/in/yehtut-aung-b8594b167" target="_blank" class="contact-card">
+                <a href="https://www.linkedin.com/in/ye-htut-aung-b8594b167/" target="_blank" class="contact-card">
                     <div class="contact-icon">
                         <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                             <path d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z"></path>
@@ -433,7 +433,7 @@
                         <polyline points="22,6 12,13 2,6"></polyline>
                     </svg>
                 </a>
-                <a href="https://linkedin.com/in/yehtut-aung-b8594b167" target="_blank" aria-label="LinkedIn">
+                <a href="https://www.linkedin.com/in/ye-htut-aung-b8594b167/" target="_blank" aria-label="LinkedIn">
                     <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                         <path d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z"></path>
                         <rect x="2" y="9" width="4" height="12"></rect>
