Update hero label

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <span class="badge-dot"></span>
                 <span data-i18n="hero.available">Available for opportunities</span>
             </div>
-            <p class="label" data-i18n="hero.label">Senior Full-Stack Developer</p>
+            <p class="label" data-i18n="hero.label">Technical Engineering Lead | Cross-Team Delivery & System Design</p>
             <h1>Ye Htut Aung</h1>
             <p class="subtitle" data-i18n="hero.subtitle">Senior Full-Stack Developer specializing in API integrations and enterprise system connectivity.</p>
             <p class="summary" data-i18n="hero.summary">
