Update About section copy

--- a/index.html
+++ b/index.html
@@ -90,15 +90,13 @@
             <div class="about-content">
                 <div class="about-text">
                     <p data-i18n="about.p1">
-                        Singapore-based Full Stack Developer building scalable web applications and enterprise integrations.
+                        Singapore-based Technical Engineering Lead experienced in architecting scalable backend systems and guiding engineering teams across complex enterprise environments.
                     </p>
                     <p data-i18n="about.p2">
-                        Experienced in backend architecture, API design, cloud deployment, and connecting complex
-                        systems across SAP, government services, and modern cloud platforms.
+                        With a background in both software engineering and project leadership, I bridge technical execution with delivery alignment—mentoring developers, establishing engineering standards, and ensuring system-wide architectural coherence.
                     </p>
                     <p data-i18n="about.p3">
-                        I specialize in solving the problems between systems—turning fragmented platforms into
-                        secure, reliable, and production-ready solutions.
+                        I specialize in transforming fragmented platforms into secure, integrated, and production-grade solutions across enterprise and cloud ecosystems.
                     </p>
                 </div>
                 <div class="about-image">
