Update contact intro

--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@
                 <span class="section-number">06</span>
                 <h2 data-i18n="contact.title">Contact</h2>
             </div>
-            <p class="contact-intro" data-i18n="contact.intro">Open to backend engineering, API development, and enterprise integration roles.</p>
+            <p class="contact-intro" data-i18n="contact.intro">Open to Tech Engineer Lead / Engineering Lead opportunities. Experienced in team leadership, architecture, and enterprise integrations, collaborating closely with PMO and product teams to deliver scalable systems.</p>
             <div class="contact-cards">
                 <a href="mailto:yehtutaung.yanyan@gmail.com" class="contact-card">
                     <div class="contact-icon">
