Update How I Work section

--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
                         </svg>
                     </div>
                     <h3 data-i18n="values.communication.title">Communication</h3>
-                    <p data-i18n="values.communication.desc">Direct communication, thorough documentation. I ask questions early and keep stakeholders informed.</p>
+                    <p data-i18n="values.communication.desc">Foster direct and transparent communication across engineering teams and with PMO/product stakeholders. Encourage early questions, thorough documentation, and keeping all teams aligned on technical direction and decisions.</p>
                 </div>
                 <div class="value-card">
                     <div class="value-icon">
@@ -359,7 +359,7 @@
                         </svg>
                     </div>
                     <h3 data-i18n="values.problem.title">Problem Solving</h3>
-                    <p data-i18n="values.problem.desc">Understand first, then propose. Tests, validated assumptions, incremental delivery over big-bang releases.</p>
+                    <p data-i18n="values.problem.desc">Guide teams to analyze problems before proposing solutions, validate assumptions, and deliver incrementally. Ensure solutions are technically sound and maintainable, balancing quality with timely delivery.</p>
                 </div>
                 <div class="value-card">
                     <div class="value-icon">
@@ -368,7 +368,19 @@
                         </svg>
                     </div>
                     <h3 data-i18n="values.production.title">Production Mindset</h3>
-                    <p data-i18n="values.production.desc">Security from the start, edge cases handled, maintainable code. Systems that run reliably, not just pass demos.</p>
+                    <p data-i18n="values.production.desc">Drive teams to build secure, reliable, and maintainable systems. Emphasize edge-case handling, production readiness, and operational excellence across backend, frontend, and integrations.</p>
+                </div>
+                <div class="value-card">
+                    <div class="value-icon">
+                        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                            <path d="M16 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"></path>
+                            <circle cx="8.5" cy="7" r="4"></circle>
+                            <path d="M20 8v6"></path>
+                            <path d="M23 11h-6"></path>
+                        </svg>
+                    </div>
+                    <h3 data-i18n="values.leadership.title">Leadership & Alignment</h3>
+                    <p data-i18n="values.leadership.desc">Mentor senior and junior developers, providing guidance and code reviews. Define architectural standards and engineering best practices. Align multiple teams with cross-functional stakeholders, ensuring consistent and scalable solutions.</p>
                 </div>
             </div>
         </section>
